# shamna

./: .gitignore  README.md
.github/workflows/: migrate.yml
apps/api/: pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 002_user_profile_fields.py  42e84b1c7e20_create_users_and_otp_codes_tables.py  8a5d4dc3c4c1_initial.py
apps/api/app/: main.py
apps/api/app/models/: otp.py  user.py
apps/api/app/routers/: auth.py  uploads.py
apps/web/: AGENTS.md  middleware.ts  postcss.config.mjs  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/auth/: page.tsx
apps/web/app/category/[slug]/: page.tsx
apps/web/app/listing/[id]/: page.tsx
apps/web/app/post/: page.tsx
apps/web/app/profile/: page.tsx
apps/web/components/: hero.tsx  listing-card.tsx  listing-list-card.tsx  navbar.tsx
apps/web/components/post/: page.tsx  step-category.tsx  step-details.tsx  step-indicator.tsx  step-photos.tsx  step-review.tsx
apps/web/lib/: api.ts  utils.ts
apps/web/types/: listing.ts  post.ts
